namespaces/mattermost/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["35.241.255.137"],"port":443,"protocol":"HTTPS","serviceName":"mattermost:mattermost","ingressName":"mattermost:mattermost","hostname":"mm.35.241.255.137.nip.io","path":"/","allNodes":false}]'
  name: mattermost
  namespace: mattermost
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mattermost
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-04-18T05:35:20Z'
      labels:
        app: mattermost
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - oci-e5-node1
      containers:
      - env:
        - name: MM_SQLSETTINGS_DRIVERNAME
          value: postgres
        - name: MM_SQLSETTINGS_DATASOURCE
          value: postgres://aiot:aiot123@postgres.aiot.svc:5432/mattermost?sslmode=disable
        - name: MM_SERVICESETTINGS_SITEURL
          value: https://mm.35.241.255.137.nip.io
        - name: MM_SERVICESETTINGS_SESSIONLENGTHMOBILEINDAYS
          value: '365'
        - name: MM_SERVICESETTINGS_SESSIONLENGTHWEBINDAYS
          value: '365'
        - name: MM_SERVICESETTINGS_SESSIONLENGTHSSOINDDAYS
          value: '365'
        - name: MM_SERVICESETTINGS_SESSIONIDLETIMEOUTINMINUTES
          value: '0'
        - name: MM_SERVICESETTINGS_EXTENDSSESSIONLENGTHWITHACTIVITY
          value: 'true'
        - name: MM_EMAILSETTINGS_ENABLESIGNUPWITHEMAIL
          value: 'true'
        - name: MM_EMAILSETTINGS_REQUIREEMAILVERIFICATION
          value: 'false'
        - name: MM_TEAMSETTINGS_ENABLEOPENSERVER
          value: 'true'
        - name: MM_SERVICESETTINGS_ENABLEOPENSERVER
          value: 'true'
        image: mattermost/mattermost-team-edition:latest
        imagePullPolicy: Always
        name: mattermost
        ports:
        - containerPort: 8065
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      nodeSelector:
        node-role.kubernetes.io/worker: ''
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
